--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,12 @@
         <div id="app"></div>
         <script src="index.js"></script>
         <div class="">
-            <div class="yes">
+            <h1>Yeeeeeeaaaaaaahhhhhh boiiiiiiiiiiiiiiiiiiii</h1>
+            <p class="yes">
                 Hey hey!
-            </div>
+            </p>
+            <p>ho ho</p>
+            <p>hot reloading is good to go</p>
         </div>
     </body>
 </html>
